# myLabs

./: .gitignore  LICENSE
10_lab/: 10_lab.cpp  CMakeLists.txt
12_lecture/: CMakeLists.txt  Game.h  main.cpp
1_lab/: 1_lab.cpp
2_lab/: 2_lab.cpp
3_lab/: 3_lab.cpp
4_lab/: 4_lab.cpp  CMakeLists.txt  Circle.cpp  Circle.h  conanfile.py
5_lab/: 5_lab.cpp  5_lab.txt  CMakeLists.txt
6_lab/: 6_lab.cpp  CMakeLists.txt
6_lab/inc/: output_file.hpp  process_file.hpp  read_file.hpp
6_lab/src/: output_file.cpp  process_file.cpp  read_file.cpp
8_lab/: 8_lab.cpp  CMakeLists.txt
9_lab/: 9_lab.cpp  CMakeLists.txt
practice/2_practice/: 2_pract.cpp  CMakeLists.txt
practice/3_practice/: 3_pract.cpp  CMakeLists.txt  input.txt
practice/4_practice/: 4_pract.cpp  CMakeLists.txt
practice/5_practice/: 5_pract.cpp  CMakeLists.txt
practice/6_practice/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt  example.cpp  main.cpp  numbersFunc.cpp  project.cpp
project/inc/: example.h  logger.h  numbersFunc.h
